--- a/www/styles.css
+++ b/www/styles.css
@@ -1,4 +1,50 @@
 body {
     min-height: 100vh;
+    font-family: 'Noto Sans JP', sans-serif;
     background: linear-gradient(180deg, rgba(77, 103, 132, 1) 0%, rgba(167, 135, 181, 1) 100%);
+}
+
+.nav{
+  display: none;
+}
+
+#title img{
+  margin-top: 30vh;
+  max-width: 100% !important;
+  height: auto !important;
+}
+
+.btn-container{
+  text-align: center;
+  position: relative;
+}
+
+.btn{
+  background: transparent;
+  border: solid 1px white;
+  color: white;
+  width: 280px;
+  height: 45px;
+  border-radius: 45px;
+  line-height: 30px;
+  letter-spacing: 1px;
+  margin: 2vh;
+  font-size: 16px;
+}
+
+.btn-slash{
+  background: white;
+  height: 8vh;
+  width: 1px;
+  margin: 2vh auto;
+}
+
+.start-btn-container::after{
+  content: "";
+  position:absolute;
+  top: calc(2vh - 5px); left: calc(50vw - 160px);
+  border: solid 1px white;
+  width: 290px;
+  border-radius: 45px;
+  height: 55px;
 }
