--- a/www/styles.css
+++ b/www/styles.css
@@ -30,6 +30,12 @@ body {
   letter-spacing: 1px;
   margin: 2vh;
   font-size: 16px;
+  transition: .3s;
+}
+
+.btn:hover{
+  transform: scale(1.1);
+  color: white;
 }
 
 .btn-slash{
