--- a/www/styles.css
+++ b/www/styles.css
@@ -11,9 +11,9 @@ h4 {
     color: white;
 }
 
-h5{
-  font-size: 24px;
-  color: white;
+h5 {
+    font-size: 24px;
+    color: white;
 }
 
 .tab-content .tab-pane:nth-child(1) {
@@ -170,9 +170,24 @@ h5{
 
 .game-container #mob12 {
     position: absolute;
-    top: 33%;
+    top: 38%;
     left: 40%;
     transform: rotate(40deg);
+}
+
+.game-container #mob13 {
+    position: absolute;
+    top: 25%;
+    left: 37%;
+    transform: rotate(-50deg);
+}
+
+.game-container #mainCard {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotateY(-90deg);
+    z-index: 1;
 }
 
 /*逆位置*/
@@ -188,8 +203,8 @@ h5{
     margin: 50px;
 }
 
-#cardimage img{
-  box-shadow: 0 0 20px 10px rgba(31, 31, 31, 0.6);
+#cardimage img {
+    box-shadow: 0 0 20px 10px rgba(31, 31, 31, 0.6);
 }
 
 #sentence > h4 {
@@ -225,26 +240,26 @@ h5{
 }
 
 /*modal*/
-.modal-dialog{
-  margin: 10vh auto;
+.modal-dialog {
+    margin: 10vh auto;
 }
 
-.modal-content{
-  background: #333;
-  text-align: center;
-  max-width: 85vw;
-  margin: 0 auto;
+.modal-content {
+    background: #333;
+    text-align: center;
+    max-width: 85vw;
+    margin: 0 auto;
 }
 
-.modal-header{
-  background: #333;
-  text-align: center;
-  border-bottom: solid 1px gray;
+.modal-header {
+    background: #333;
+    text-align: center;
+    border-bottom: solid 1px gray;
 }
 
-.modal-body>img{
-  height: 60vh;
-  width: auto;
+.modal-body > img {
+    height: 60vh;
+    width: auto;
 }
 
 /*ボタン関連のcss*/
@@ -268,13 +283,13 @@ h5{
     z-index: 1;
 }
 
-.garraly-container .btn{
-  border: none;
-  border-radius: 0;
-  width: auto;
-  height: auto;
-  padding: 0;
-  margin: 0;
+.garraly-container .btn {
+    border: none;
+    border-radius: 0;
+    width: auto;
+    height: auto;
+    padding: 0;
+    margin: 0;
 }
 
 #Tweet_button {
@@ -330,52 +345,60 @@ h5{
     -webkit-clip-path: polygon(50% 0, 62% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%, 43% 39%, 13% 39%, 37% 55%, 28% 81%, 50% 65%, 72% 81%, 63% 55%, 87% 39%, 59% 39%, 50% 10%, 43% 39%, 39% 35%);
 }
 
-.mob1_move{
-    animation: shuffle1 5s ease 0s forwards;
+.mob1_move {
+    animation: shuffle1 5s ease-in 0s forwards;
 }
 
-.mob2_move{
+.mob2_move {
     animation: shuffle2 5s ease 0s forwards;
 }
 
-.mob3_move{
-    animation: shuffle3 5s ease 0s forwards;
+.mob3_move {
+    animation: shuffle3 5s ease-out 0s forwards;
 }
 
-.mob4_move{
-    animation: shuffle4 5s ease 0s forwards;
+.mob4_move {
+    animation: shuffle4 5s ease-in 0s forwards;
 }
 
-.mob5_move{
+.mob5_move {
     animation: shuffle5 5s ease 0s forwards;
 }
 
-.mob6_move{
-    animation: shuffle6 5s ease 0s forwards;
+.mob6_move {
+    animation: shuffle6 5s ease-out 0s forwards;
 }
 
-.mob7_move{
+.mob7_move {
     animation: shuffle7 5s ease 0s forwards;
 }
 
-.mob8_move{
+.mob8_move {
     animation: shuffle8 5s ease 0s forwards;
 }
 
-.mob9_move{
+.mob9_move {
     animation: shuffle9 5s ease 0s forwards;
 }
 
-.mob10_move{
+.mob10_move {
     animation: shuffle10 5s ease 0s forwards;
 }
 
-.mob11_move{
-    animation: shuffle11 5s ease 0s forwards;
+.mob11_move {
+    animation: shuffle11 5s ease-out 0s forwards;
 }
 
-.mob12_move{
-    animation: shuffle12 5s ease 0s forwards;
+.mob12_move {
+    animation: shuffle12 5s ease-out 0s forwards;
+}
+
+.mob13_move {
+    animation: shuffle13 5s linear 0s forwards;
+}
+
+.mainCard_move {
+    animation: Card_rotate 5s linear 0s forwards;
 }
 
 @keyframes sizuku {
@@ -406,153 +429,287 @@ h5{
     }
 }
 
-@keyframes shuffle1{
-  60%{
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-100%) rotate(0deg);
-  }
-  100%{
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-100%) rotate(0deg);
-  }
+@keyframes shuffle1 {
+    20% {
+        top: 45%;
+        left: 55%;
+        transform: translate(-15%, -20%) rotate(260deg);
+    }
+
+    60% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -100%) rotate(0deg);
+    }
+
+    100% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -100%) rotate(0deg);
+    }
 }
 
-@keyframes shuffle2{
-  60%{
-    top: 50%;
-    left: 50%;
-    transform: translate(0%,-90%) rotate(30deg);
-  }
-  100%{
-    top: 50%;
-    left: 50%;
-    transform: translate(0%,-90%) rotate(30deg);
-  }
+@keyframes shuffle2 {
+    20% {
+        top: 40%;
+        left: 30%;
+        transform: translate(0%, 50%) rotate(90deg);
+    }
+
+    60% {
+        top: 50%;
+        left: 50%;
+        transform: translate(0%, -90%) rotate(30deg);
+    }
+
+    100% {
+        top: 50%;
+        left: 50%;
+        transform: translate(0%, -90%) rotate(30deg);
+    }
 }
 
-@keyframes shuffle3{
-  60%{
-    top: 50%;
-    left: 50%;
-    transform: translate(30%,-80%) rotate(60deg);
-  }
-  100%{
-    top: 50%;
-    left: 50%;
-    transform: translate(30%,-80%) rotate(60deg);
-  }
+@keyframes shuffle3 {
+    20% {
+        top: 40%;
+        left: 10%;
+        transform: translate(20%, 30%) rotate(10deg);
+    }
+
+    60% {
+        top: 50%;
+        left: 50%;
+        transform: translate(30%, -80%) rotate(60deg);
+    }
+
+    100% {
+        top: 50%;
+        left: 50%;
+        transform: translate(30%, -80%) rotate(60deg);
+    }
 }
 
-@keyframes shuffle4{
-  60%{
-    top: 50%;
-    left: 50%;
-    transform: translate(50%,-50%) rotate(90deg);
-  }
-  100%{
-    top: 50%;
-    left: 50%;
-    transform: translate(50%,-50%) rotate(90deg);
-  }
+@keyframes shuffle4 {
+    30% {
+        top: 40%;
+        left: 35%;
+        transform: translate(0%, 50%) rotate(150deg);
+    }
+
+    60% {
+        top: 50%;
+        left: 50%;
+        transform: translate(50%, -50%) rotate(90deg);
+    }
+
+    100% {
+        top: 50%;
+        left: 50%;
+        transform: translate(50%, -50%) rotate(90deg);
+    }
 }
 
-@keyframes shuffle5{
-  100%{
-    top: 50%;
-    left: 50%;
-    transform: translate(30%,-24%) rotate(120deg);
-  }
+@keyframes shuffle5 {
+    30% {
+        top: 40%;
+        left: 20%;
+        transform: translate(20%, -50%) rotate(220deg);
+    }
+
+    60% {
+        top: 50%;
+        left: 50%;
+        transform: translate(30%, -24%) rotate(120deg);
+    }
+
+    100% {
+        top: 50%;
+        left: 50%;
+        transform: translate(30%, -24%) rotate(120deg);
+    }
 }
 
-@keyframes shuffle6{
-  60%{
-    top: 50%;
-    left: 50%;
-    transform: translate(-2%,-7%) rotate(150deg);
-  }
-  100%{
-    top: 50%;
-    left: 50%;
-    transform: translate(-2%,-7%) rotate(150deg);
-  }
+@keyframes shuffle6 {
+    30% {
+        top: 35%;
+        left: 55%;
+        transform: translate(20%, 40%) rotate(250deg);
+    }
+
+    60% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-2%, -7%) rotate(150deg);
+    }
+
+    100% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-2%, -7%) rotate(150deg);
+    }
 }
 
-@keyframes shuffle7{
-  60%{
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,0%) rotate(180deg);
-  }
-  100%{
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,0%) rotate(180deg);
-  }
+@keyframes shuffle7 {
+    30% {
+        top: 40%;
+        left: 50%;
+        transform: translate(-30%, 30%) rotate(70deg);
+    }
+
+    60% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, 0%) rotate(180deg);
+    }
+
+    100% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, 0%) rotate(180deg);
+    }
 }
 
-@keyframes shuffle8{
-  60%{
-    top: 50%;
-    left: 50%;
-    transform: translate(-90%,-8%) rotate(210deg);
-  }
-  100%{
-    top: 50%;
-    left: 50%;
-    transform: translate(-90%,-8%) rotate(210deg);
-  }
+@keyframes shuffle8 {
+    30% {
+        top: 40%;
+        left: 65%;
+        transform: translate(30%, 40%) rotate(60deg);
+    }
+
+    60% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-90%, -8%) rotate(210deg);
+    }
+
+    100% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-90%, -8%) rotate(210deg);
+    }
 }
 
-@keyframes shuffle9{
-  60%{
-    top: 50%;
-    left: 50%;
-    transform: translate(-135%,-30%) rotate(240deg);
-  }
-  100%{
-    top: 50%;
-    left: 50%;
-    transform: translate(-135%,-30%) rotate(240deg);
-  }
+@keyframes shuffle9 {
+    30% {
+        top: 40%;
+        left: 30%;
+        transform: translate(30%, 40%) rotate(160deg);
+    }
+
+    60% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-135%, -30%) rotate(240deg);
+    }
+
+    100% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-135%, -30%) rotate(240deg);
+    }
 }
 
-@keyframes shuffle10{
-  60%{
-    top: 50%;
-    left: 50%;
-    transform: translate(-150%,-50%) rotate(270deg);
-  }
-  100%{
-    top: 50%;
-    left: 50%;
-    transform: translate(-150%,-50%) rotate(270deg);
-  }
+@keyframes shuffle10 {
+    40% {
+        top: 60%;
+        left: 20%;
+        transform: translate(30%, -20%) rotate(20deg);
+    }
+
+    60% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-150%, -50%) rotate(270deg);
+    }
+
+    100% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-150%, -50%) rotate(270deg);
+    }
 }
 
-@keyframes shuffle11{
-  60%{
-    top: 50%;
-    left: 50%;
-    transform: translate(-140%,-75%) rotate(300deg);
-  }
-  100%{
-    top: 50%;
-    left: 50%;
-    transform: translate(-140%,-75%) rotate(300deg);
-  }
+@keyframes shuffle11 {
+    40% {
+        top: 30%;
+        left: 45%;
+        transform: translate(-20%, 10%) rotate(30deg);
+    }
+
+    60% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-140%, -75%) rotate(300deg);
+    }
+
+    100% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-140%, -75%) rotate(300deg);
+    }
 }
 
-@keyframes shuffle12{
-  60%{
-    top: 50%;
-    left: 50%;
-    transform: translate(-100%,-95%) rotate(330deg);
-  }
-  100%{
-    top: 50%;
-    left: 50%;
-    transform: translate(-100%,-95%) rotate(330deg);
-  }
+@keyframes shuffle12 {
+    40% {
+        top: 45%;
+        left: 75%;
+        transform: translate(10%, 30%) rotate(110deg);
+    }
+
+    60% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-100%, -95%) rotate(330deg);
+    }
+
+    100% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-100%, -95%) rotate(330deg);
+    }
+}
+
+@keyframes shuffle13 {
+    40% {
+        top: 25%;
+        left: 25%;
+        transform: translate(10%, 30%) rotate(90deg);
+    }
+    60% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(0deg);
+    }
+
+    75% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(0deg) rotateY(-90deg);
+    }
+
+    80% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(0deg) rotateY(-90deg);
+    }
+
+    100% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(0deg) rotateY(-90deg);
+    }
+}
+
+@keyframes Card_rotate {
+    75% {
+        transform: translate(-50%, -50%) rotateY(-90deg);
+    }
+
+    80% {
+        transform: translate(-50%, -50%) rotateY(0deg);
+    }
+
+    100% {
+        transform: translate(-50%, -50%) rotateY(0deg);
+    }
 }
