--- a/www/styles.css
+++ b/www/styles.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Noto Sans JP', sans-serif;
+    min-height: 100vh;
     background: linear-gradient(180deg, rgba(77, 103, 132, 1) 0%, rgba(167, 135, 181, 1) 100%);
 }
 
@@ -335,8 +336,8 @@ h5 {
 }
 
 /*effect関連のcss*/
-.fade_in{
-  animation: fadeIn 2s ease 1s forwards;
+.fade_in {
+    animation: fadeIn 2s ease 1s forwards;
 }
 
 .sizuku {
@@ -411,6 +412,16 @@ h5 {
 .mainCard_move {
     animation: Card_rotate 5s linear 0s forwards;
 }
+
+.cartain_container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
+
 
 @keyframes sizuku {
     0% {
@@ -726,7 +737,23 @@ h5 {
     }
 }
 
-@keyframes fadeIn{
-  from{opacity: 0;}
-  to{opacity: 1;}
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
+
+
+@keyframes cartain-fall {
+
+    80%,
+    100% {
+        top: 0;
+        opacity: 1;
+    }
+}
+
